<resources>
    <string name="app_name">AppFSTR</string>
    <string name="login">Войти</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="father_name">Отчество</string>
    <string name="email">E-mail</string>
    <string name="email_need">E-mail будет логином и основным средством связи с вами</string>
    <string name="phone">телефон</string>
    <string name="social_links">ссылки на соцсети</string>
    <string name="optional">по желанию</string>
    <string name="mountain_name">название перевала</string>
    <string name="image_description">описание к фото</string>
    <string name="height">Высота</string>
    <string name="metres">метров</string>
    <string name="mountain_category">категория перевала</string>
    <string name="category_none">Н/К</string>
    <string name="category_a1">А1</string>
    <string name="category_b1">Б1</string>
    <string name="category_a2">А2</string>
    <string name="category_b2">Б2</string>
    <string name="category_a3">А3</string>
    <string name="category_b3">Б3</string>
    <string name="upper_star">*</string>
    <string name="not_sure">не уверен</string>
    <string name="estimated">оценочно</string>
    <string name="date_of_pass">Дата прохождения</string>
    <string name="coordinates">Координаты</string>
    <string name="latitude_symbol">N</string>
    <string name="latitude_abbr">lat:</string>
    <string name="longtitude_symbol">E</string>
    <string name="lon_abbr">lon:</string>
    <string name="degrees_symbol">*</string>
    <string name="minutes_symbol">\'</string>
    <string name="height_symbol">H</string>
    <string name="photo">Фото</string>
    <string name="from_gallery">из галереи</string>
    <string name="from_camera">с камеры</string>
    <string name="add">добавить</string>
    <string name="update">обновить</string>
    <string name="coords">координаты</string>
    <string name="ok">ok</string>
    <string name="add_coords">Добавить координаты WGS(+/-x.x):</string>
    <string name="mountain_name_is_empty">название перевала не заполнено</string>
    <string name="mountain_category_is_empty">категория перевала не выбрана</string>
    <string name="mountain_date_is_empty">дата не выбрана</string>
    <string name="mountain_coords_is_empty">координаты не заданы</string>
    <string name="mountain_height_is_empty">высота не задана</string>
    <string name="height_is_lower_zero">высота не может быть меньше нуля</string>
    <string name="not_all_data_inserted">не все данные введены</string>
    <string name="send">отправить</string>
    <string name="decline">отмена</string>

    <string name="on_send">на отправку</string>
    <string name="sended">отправлено</string>
    <string name="accepted">принято</string>
    <string name="published">опубликовано</string>
    <string name="declined">отклонено</string>
    <string name="logout">выйти</string>

    <string name="describe_mountain">ОПИШИ ПЕРЕВАЛ</string>
    <string name="describe_mountain_on_login">Наполняем каталог перевалов вместе</string>
    <string name="lets_meet">Давайте знакомиться</string>
    <string name="register_screen_describe">Запишем вас в базу туристов ФСТР</string>
    <string name="click_on_add_mountain">Нажмите на + чтобы добавить перевал</string>
</resources>