<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mountain_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/mountain_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/category_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mountain_name_edit_text"
            android:layout_marginTop="@dimen/margin_tiny"/>

        <TextView
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountain_category"
            app:layout_constraintTop_toBottomOf="@id/category_divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/category_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_smallest"
            app:chipSpacingVertical="@dimen/chip_spacing_tiny"
            app:chipSpacingHorizontal="@dimen/chip_spacing_normal"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_none"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_a1"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_b1"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_a2"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_b2"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_a3"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_category_b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_b3"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sub_category_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category_chip_group"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_smallest"
            app:chipSpacingVertical="@dimen/chip_spacing_small"
            app:chipSpacingHorizontal="@dimen/chip_spacing_normal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_difficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_star"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_not_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_sure"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/date_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sub_category_chip_group"
            android:layout_marginTop="@dimen/margin_tiny"/>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_pass"
            app:layout_constraintTop_toBottomOf="@id/date_divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"/>

        <Button
            android:id="@+id/open_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_text"
            android:layout_marginStart="@dimen/margin_small"
            android:textSize="@dimen/text_size_big"
            app:icon="@drawable/ic_baseline_calendar_month_24"
            style="@style/OutlineRoundButton"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/coordinates_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/open_date_btn"
            android:layout_marginTop="@dimen/margin_tiny"/>

        <TextView
            android:id="@+id/coordinates_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates"
            app:layout_constraintTop_toBottomOf="@id/coordinates_divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"/>

        <Button
            android:id="@+id/open_coords_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/height_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/coordinates_text"
            app:layout_constraintHorizontal_weight="3"
            android:layout_marginStart="@dimen/margin_small"
            android:textSize="@dimen/text_size_big"
            app:icon="@drawable/ic_baseline_location_on_24"
            style="@style/OutlineRoundButton"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/open_coords_btn"
            app:layout_constraintBottom_toBottomOf="@id/open_coords_btn"
            app:layout_constraintStart_toEndOf="@id/open_coords_btn"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/photo_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/height_name_edit_text"
            android:layout_marginTop="@dimen/margin_tiny"/>

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            app:layout_constraintTop_toBottomOf="@id/photo_divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_small"/>

        <Button
            android:text="@string/from_gallery"
            android:id="@+id/add_from_gallery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_text"
            android:layout_marginStart="@dimen/margin_small"
            app:icon="@drawable/ic_baseline_photo_library_24"
            style="@style/OutlineRoundButton"/>

        <Button
            android:text="@string/from_camera"
            android:id="@+id/add_from_camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toEndOf="@id/add_from_gallery_btn"
            app:layout_constraintTop_toBottomOf="@id/photo_text"
            android:layout_marginStart="@dimen/margin_small"
            app:icon="@drawable/ic_baseline_photo_camera_24"
            style="@style/OutlineRoundButton"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height_normal"
            app:layout_constraintTop_toBottomOf="@id/add_from_camera_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_smallest"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/image_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:hint="@string/image_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_mountain_btn"
            android:text="add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button_large"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/image_description_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/RoundButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>